checkout page added to web app

--- a/eshop-zone/src/app/auth/signin/signin.component.css
+++ b/eshop-zone/src/app/auth/signin/signin.component.css
@@ -39,3 +39,9 @@
     margin-right: auto;
     padding-top: 10em;
 }
+p{
+    margin-bottom: 1px !important;
+}
+.title-auth{
+    margin-left: 36px !important;
+}
