--- a/eshop-zone/src/app/auth/signin/signin.component.html
+++ b/eshop-zone/src/app/auth/signin/signin.component.html
@@ -13,12 +13,13 @@
                 <label class="control-label text-secondary">Password</label>
                 <input type="password" formControlName="password" class="form-control" >
             </div>
-            <div class="form-group col-md-10 centered">
+            <div class="form-group mt-2 col-md-10 centered">
                 <button type="submit" class="btn btn-dark">Sign in</button>
             </div>
         </form>
-        <div class="col-12 form-head">
-            <p class="ml-3 mb-5">Don't have an account?<a routerLink="/signup">Signup here</a></p>
+        <div class="col-12 mt-2 form-head  mb-5">
+            <p class="ml-3">Don't have an account? <a routerLink="/signup">Signup here</a></p>
+            <p class="ml-3">Or<a routerLink="/home"> Continue</a></p>
         </div>
     </div>
 </div>
