--- a/eshop-zone/src/app/auth/signup/signup.component.html
+++ b/eshop-zone/src/app/auth/signup/signup.component.html
@@ -4,8 +4,8 @@
         <div class="row text-center sign-head">
             <div class="form-group col-12  mt-3"><h1>Eshop-Zone</h1></div>
         </div>
-        <div class="col-12 form-head"><h1>Register</h1></div>
-        <form [formGroup]="signupForm" class="mt-5" (submit)="signUp()">
+        <div class="col-12 ml-2 form-head title-auth"><h1>Register</h1></div>
+        <form [formGroup]="signupForm" class="mt-3" (submit)="signUp()">
             <div class="form-group col-md-10 centered">
                 <label class="control-label text-secondary">Name</label>
                 <input [class.is-invalid]="signupForm.get('name')?.invalid && signupForm.get('name')?.touched " 
@@ -36,11 +36,12 @@
                 <small *ngIf="signupForm.errors?.passwordMissMatch && (signupForm.touched || signupForm.dirty)" 
                     class="text-danger">Passwords does not match</small>
             </div>
-            <div class="form-group col-md-10 centered">
+            <div class="form-group mt-2 col-md-10 centered">
                 <button type="submit" class="btn btn-dark">Sign up</button>
             </div>
-            <div class="col-12 form-head">
-                <p class="ml-3 mb-5">Already have an account?<a routerLink="/signin">Signin here</a></p>
+            <div class="col-12 mt-2 form-head mb-5">
+                <p class="ml-3 ">Already have an account?<a routerLink="/signin">Signin here</a></p>
+                <p class="ml-3">Or<a routerLink="/home"> Continue</a></p>
             </div>
         </form>
     </div>
