Wallet service added to web app

--- a/eshop-zone/src/app/user/user-wallet/user-wallet.component.html
+++ b/eshop-zone/src/app/user/user-wallet/user-wallet.component.html
@@ -2,15 +2,30 @@
     
     <div class="col-12">
         <div class="row">
-            <div class="form-group col-md-12 "><h2>Wallet</h2></div>
+            <div class="form-group col-md-12 mb-0"><h2>Wallet</h2></div>
         </div>
-        <form >
-            <div class="input-group">
-                <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
-                <div class="input-group-append">
-                  <span class="input-group-text">₹ &nbsp; Top Up</span>
-                </div>
+        <div class="row" *ngIf="wallet">
+            <div class="form-group col-md-12 h5 ">Balance : ₹ {{wallet.balance| number}}</div>
+        </div>
+        <div class="row" *ngIf="!wallet && !isAdd">
+            <div class="form-group col-md-12 h5 "><span (click)="addNew()" class="badge badge-dark">Add Wallet</span></div>
+        </div>
+        <div class="input-group" *ngIf="!wallet && isAdd">
+            <input type="number" class="form-control" [(ngModel)]="amount">
+            <div class="input-group-append">
+                <span (click)="add()" class="input-group-text">₹ &nbsp; ADD</span>
+                <button (click)="cancel()" class="btn btn-outline-secondary" type="button">X</button>
             </div>
-        </form>
+        </div>
+        <div class="row" *ngIf="wallet && !isTopUp">
+            <div class="form-group col-md-12 h5 "><span (click)="newTopUp()" class="badge badge-dark">Top Up</span></div>
+        </div>
+        <div class="input-group" *ngIf="wallet && isTopUp">
+            <input type="number" class="form-control" [(ngModel)]="amount">
+            <div class="input-group-append">
+                <span (click)="topup()" class="input-group-text">₹ &nbsp; Top Up</span>
+                <button (click)="cancel()" class="btn btn-outline-secondary" type="button">X</button>
+            </div>
+        </div>
     </div>
 </div>
