--- a/eshop-zone/src/app/user/user-details/user-details.component.html
+++ b/eshop-zone/src/app/user/user-details/user-details.component.html
@@ -29,11 +29,11 @@
             <div class="row">
                 <div class="form-group col-md-6">
                     <label class="control-label text-secondary">Password</label>
-                    <input formControlName="password" class="form-control" >
+                    <input type="password" formControlName="password" class="form-control" >
                 </div>
                 <div class="form-group col-md-6">
                     <label  class="control-label text-secondary">Confirm Password</label>
-                    <input [class.is-invalid]="userForm.errors?.passwordMissMatch && (userForm.touched || userForm.dirty)" formControlName="confimPassword" class="form-control" >
+                    <input type="password" [class.is-invalid]="userForm.errors?.passwordMissMatch && (userForm.touched || userForm.dirty)" formControlName="confimPassword" class="form-control" >
                     <small *ngIf="userForm.errors?.passwordMissMatch && (userForm.touched || userForm.dirty)" 
                         class="text-danger">Passwords does not match</small>
                 </div>
