--- a/eshop-zone/src/app/user/user-wallet/user-wallet.component.css
+++ b/eshop-zone/src/app/user/user-wallet/user-wallet.component.css
@@ -4,3 +4,16 @@
     color: white;
 
 }
+.badge{
+    width: -webkit-fill-available;
+    font-size: large;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+  -moz-appearance: textfield;
+}
