product services added

--- a/eshop-zone/src/app/merchant/add-product/add-product.component.html
+++ b/eshop-zone/src/app/merchant/add-product/add-product.component.html
@@ -6,7 +6,7 @@
             
                          
         </div>   
-        <form [formGroup]="productForm"  (submit)="add()">
+        <form [formGroup]="productForm"  (submit)="save()">
             <div  class="text-danger"></div>
                 <div class="form-group col-md-10">
                     <label class="control-label text-secondary">Name</label>
@@ -24,27 +24,32 @@
                     <small *ngIf="productForm.get('description')?.invalid && productForm.get('description')?.touched" class="text-danger">Description is required</small>
                 </div>
                 <div class="form-group col-md-10">
-                    <label class="control-label text-secondary">price</label>
+                    <label class="control-label text-secondary">Price</label>
                     <input [class.is-invalid]="productForm.get('price')?.invalid && productForm.get('price')?.touched " 
                         formControlName="price" type="text" class="form-control" >
-                    <small *ngIf="productForm.get('price')?.invalid && productForm.get('price')?.touched" class="text-danger">price is required</small>
+                    <small *ngIf="productForm.get('price')?.invalid && productForm.get('price')?.touched" class="text-danger">Please enter a valid price less than 100000</small>
                 </div>
                 <div class="form-group col-md-10">
-                    <label class="control-label text-secondary">category</label>
-                    <input [class.is-invalid]="productForm.get('category')?.invalid && productForm.get('category')?.touched " 
-                        formControlName="category" type="text" class="form-control" >
-                    <small *ngIf="productForm.get('category')?.invalid && productForm.get('category')?.touched" class="text-danger">Namcategorye is required</small>
+                    <label class="control-label text-secondary">Category</label>
+                    <select [class.is-invalid]="productForm.get('category')?.invalid && productForm.get('category')?.touched"
+                    formControlName="category"  class="form-control col-md-6">
+                        <option value="">Select a category</option>
+                        <option value="BOOKS">Books</option>
+                        <option value="ELECTRONICS">Electronics</option>
+                        <option value="APPAREL">Apparel</option>
+                        <option value="PERSONAL-CARE">Personal-Care</option>
+                    </select>
+                    <small *ngIf="productForm.get('category')?.invalid && productForm.get('category')?.touched" class="text-danger">Category is required</small>
+                    
                 </div>
                 <div class="form-group col-md-10">
                     <label class="control-label text-secondary">imageUrl</label>
-                    <input [class.is-invalid]="productForm.get('imageUrl')?.invalid && productForm.get('imageUrl')?.touched " 
-                        formControlName="imageUrl" type="text" class="form-control" >
-                    <small *ngIf="productForm.get('imageUrl')?.invalid && productForm.get('imageUrl')?.touched" class="text-danger">imageUrl is required</small>
+                    <input formControlName="imageUrl" type="text" class="form-control" >
                 </div>
 
                 <div class="form-group col-md-10 ">
-                    <button type="submit" class="btn btn-dark mr-2">&nbsp; Add &nbsp;</button>
-                    <input type="button" routerLink="/productlist" class="btn btn-light" value="Cancel"/>
+                    <button  type="submit" class="btn btn-dark  mr-2"> Add</button>
+                    <button routerLink="/productlist" class="btn btn-light"> Cancel</button>
                 </div>
         </form>
     </div>
