--- a/eshop-zone/src/app/user/user-details/user-details.component.html
+++ b/eshop-zone/src/app/user/user-details/user-details.component.html
@@ -33,7 +33,8 @@
                 </div>
                 <div class="form-group col-md-6">
                     <label  class="control-label text-secondary">Confirm Password</label>
-                    <input type="password" [class.is-invalid]="userForm.errors?.passwordMissMatch && (userForm.touched || userForm.dirty)" formControlName="confimPassword" class="form-control" >
+                    <input type="password" [class.is-invalid]="userForm.errors?.passwordMissMatch && (userForm.touched || userForm.dirty)" 
+                    formControlName="confimPassword" class="form-control" >
                     <small *ngIf="userForm.errors?.passwordMissMatch && (userForm.touched || userForm.dirty)" 
                         class="text-danger">Passwords does not match</small>
                 </div>
@@ -41,8 +42,10 @@
             <div class="row">
                 <div class="form-group col-md-6">
                     <label  class="control-label text-secondary">Phone</label>
-                    <input formControlName="phone" class="form-control" >
-                    <span class="text-danger"></span>
+                    <input [class.is-invalid]="userForm.get('phone')?.invalid && userForm.get('phone')?.touched " 
+                    formControlName="phone" class="form-control" >
+                    <small *ngIf="userForm.get('phone')?.invalid && userForm.get('phone')?.touched " 
+                        class="text-danger">Please enter a valid phone number</small>
                 </div>
             </div>
             <div formGroupName="address">
@@ -55,31 +58,29 @@
                     <div class="form-group col-md-6">
                         <label class="control-label text-secondary">Building</label>
                         <input formControlName="building" class="form-control" >
-                        <span class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-6">
                         <label  class="control-label text-secondary">Landmark</label>
                         <input formControlName="landmark" class="form-control" >
-                        <span class="text-danger"></span>
                     </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-md-6">
                         <label class="control-label text-secondary">Street</label>
                         <input formControlName="street" class="form-control" >
-                        <span class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-6">
                         <label  class="control-label text-secondary">City</label>
                         <input formControlName="city" class="form-control" >
-                        <span class="text-danger"></span>
                     </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-md-3">
                         <label  class="control-label text-secondary">Zip</label>
-                        <input formControlName="zip" class="form-control" >
+                        <input   [class.is-invalid]="userForm.get('address')?.get('zip')?.invalid && userForm.get('address')?.get('zip')?.touched "
+                        formControlName="zip" class="form-control" >
                         <span class="text-danger"></span>
+                        <small *ngIf="userForm.get('address')?.get('zip')?.invalid && userForm.get('address')?.get('zip')?.touched"  class="text-danger">Please enter a valid zip code</small>
                     </div>
                 </div>
 
