Re-naming and removing test codes from api-gateway + adding auth guard

--- a/eshop-zone/src/app/merchant/add-product/add-product.component.html
+++ b/eshop-zone/src/app/merchant/add-product/add-product.component.html
@@ -49,7 +49,7 @@
 
                 <div class="form-group col-md-10 ">
                     <button  type="submit" class="btn btn-dark  mr-2"> Add</button>
-                    <button routerLink="/productlist" class="btn btn-light"> Cancel</button>
+                    <button routerLink="/merchant" class="btn btn-light"> Cancel</button>
                 </div>
         </form>
     </div>
