--- a/eshop-zone/src/app/merchant/edit-product/edit-product.component.html
+++ b/eshop-zone/src/app/merchant/edit-product/edit-product.component.html
@@ -49,7 +49,7 @@
 
                 <div class="form-group col-md-10 ">
                     <button *ngIf="!isEdit" (click)="edit()" class="btn btn-dark mr-2">Edit</button>
-                    <button *ngIf="!isEdit" routerLink="/productlist" type="submit" class="btn btn-light">Back</button>
+                    <button *ngIf="!isEdit" routerLink="/merchant" type="submit" class="btn btn-light">Back</button>
                     <button *ngIf="isEdit" type="submit" class="btn btn-dark  mr-2"> Save</button>
                     <button *ngIf="isEdit" (click)="cancelEdit()" class="btn btn-light"> Cancel</button>
                 </div>
