--- a/eshop-zone/src/app/auth/signup/signup.component.html
+++ b/eshop-zone/src/app/auth/signup/signup.component.html
@@ -26,15 +26,13 @@
             </div>
             <div class="form-group col-md-10 centered">
                 <label class="control-label text-secondary">Password</label>
-                <input  [class.is-invalid]="signupForm.get('password')?.invalid && signupForm.get('password')?.touched " 
-                type="password" formControlName="password" class="form-control" >
+                <input type="password" formControlName="password" class="form-control" >
             </div>
             <div class="form-group col-md-10 centered">
                 <label  class="control-label text-secondary">Confirm Password</label>
-                <input [class.is-invalid]="(signupForm.errors?.passwordMissMatch && (signupForm.touched || signupForm.dirty) )|| signupForm.get('confimPassword')?.invalid && signupForm.get('confimPassword')?.touched "
+                <input [class.is-invalid]="signupForm.errors?.passwordMissMatch"
                 type="password" formControlName="confimPassword" class="form-control" >
-                <small *ngIf="signupForm.errors?.passwordMissMatch && (signupForm.touched || signupForm.dirty)" 
-                    class="text-danger">Passwords does not match</small>
+                <small *ngIf="signupForm.errors?.passwordMissMatch" class="text-danger">Passwords does not match</small>
             </div>
             <div class="form-group mt-2 col-md-10 centered">
                 <button type="submit" class="btn btn-dark">Sign up</button>
