--- a/eshop-zone/src/app/user/order-list/order-list.component.html
+++ b/eshop-zone/src/app/user/order-list/order-list.component.html
@@ -1,15 +1,25 @@
   
 
 <div class="col-lg-10 center-item">
-    <div class="col-md-12 mt-5">
-        <h1>Orders</h1>                   
-    </div>   
+    
+    <div class="row mt-5">
+        <div class="form-group col-10 "><h2>Orders</h2></div>
+
+        <div class="form-group col-2" *ngIf="orders.length!=0">
+            <select [ngModel]="status" (ngModelChange)="setList($event)" class="form-control col-12">
+                        <option value="">All</option>
+                        <option value="PENDING">Pending</option>
+                        <option value="COMPLETED">Complted</option>
+                        <option value="CANCELLED">Canceled</option>
+            </select>
+        </div>
+    </div> 
 
     <div *ngIf="orders.length==0" class="alert alert-warning" role="alert">
         Seems you have not placed any orders yet. <a routerLink="/home">Click here </a>to start shopping!
     </div>
 
-    <mat-expansion-panel class="mt-1" *ngFor="let order of orders; let i=index">
+    <mat-expansion-panel class="mt-1" *ngFor="let order of orderList; let i=index">
         <mat-expansion-panel-header>
         <mat-panel-title class="text-muted">
            Order Id : <b>#{{order.id}}</b>
