--- a/eshop-zone/src/app/user/order/order.component.html
+++ b/eshop-zone/src/app/user/order/order.component.html
@@ -1,10 +1,19 @@
   
 
 <div class="col-lg-10 center-item">
-    <div class="col-md-12 mt-5">
-        <h1>Order</h1>                   
-    </div>   
+    
+    <div class="row">
+        <div class="form-group col-md-9 "><h2>Profile</h2></div>
 
+        <div class="form-group col-md-3">
+            <select   class="form-control col-md-6">
+                        <option value="">All</option>
+                        <option value="PENDING">Pending</option>
+                        <option value="COMPLETED">Complted</option>
+                        <option value="CANCELLED">Canceled</option>
+            </select>
+        </div>
+    </div>
     <mat-expansion-panel class="mt-1">
         <mat-expansion-panel-header>
         <mat-panel-title>
