angular test cases updated with dialouge

--- a/eshop-zone/src/app/store/catalogue/catalogue.component.html
+++ b/eshop-zone/src/app/store/catalogue/catalogue.component.html
@@ -1,6 +1,10 @@
 <mat-drawer-container class="example-container">
     <mat-drawer mode="side" opened>
             <h2 class="text-muted  ml-3 mt-4">Categories</h2>
+
+
+            <mat-menu>
+            </mat-menu>
             <button class="side-nav" (click)="setList('All')" mat-menu-item>
                 <mat-icon>list</mat-icon>
                 <span>All </span>
